--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^1.0.0",
-    "astro": "^1.0.2"
+    "astro": "^1.0.2",
+    "gh-pages": "^4.0.0"
   }
 }
